Updated fragments.html with title, added bootstrap, and header (including navigation bar. Added fragments to index.html and cleaned up code

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-    <head>
+    <head th:fragment="head">
         <meta charset="UTF-8"/>
-        <title></title>
+        <title>Smart Planner</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-    <nav th:fragment="navigation-bar">
-<!--        Navigation Bar -->
-        <h3> Home | Tasks | Add a Task</h3>
+    <nav th:fragment="header">
+        <h1 th:text="${title}">Smart Planner</h1>
+        <ul class="nav">
+            <li class="nav-item"><a class="nav-link" href="">Tasks</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Add Task</a></li>
+        </ul>
     </nav>
-
     </body>
 </html>
