--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-    <head>
-        <meta charset="UTF-8"/>
-        <title></title>
+    <head th:replace="fragments :: head">
     </head>
     <body>
-    <div class="container">
-        <h1>Smart Planner</h1>
-        <nav th:replace="fragments :: navigation-bar"></nav>
-        <ul>
-            <li>Tasks</li>
-            <li>Problems</li>
-            <li>Doing</li>
-            <li>Done</li>
-        </ul>
-
-    </div>
-
-
+        <div class="container">
+            <h1>Smart Planner</h1>
+            <nav th:replace="fragments :: header"></nav>
+            <ul>
+                <li>Tasks</li>
+                <li>Problems</li>
+                <li>Doing</li>
+                <li>Done</li>
+            </ul>
+        </div>
     </body>
 </html>
