--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -7,7 +7,7 @@
 <body class="container body-content">
 <nav th:replace="fragments :: header"></nav>
 <h1>Add Task</h1>
-<form method="post">git
+<form method="post">
 <!--    <div class="form-group">-->
 <!--        <label th:for="title">Name</label>-->
 <!--        <input class="form-control" th:field="${title}" />-->
