--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -8,23 +8,32 @@
 <nav th:replace="fragments :: header"></nav>
 <h1>Add Task</h1>
 <form method="post">
-<!--    <div class="form-group">-->
-<!--        <label th:for="title">Name</label>-->
-<!--        <input class="form-control" th:field="${title}" />-->
-<!--    </div>-->
-<!--    <div class="form-group">-->
-<!--        <label th:for="date">Start Date</label>-->
-<!--        <input class="form-control" type="date" th:field="*{date}" />-->
-<!--    </div>-->
-<!--    <div class="form-group">-->
-<!--        <label th:for="description">Description</label>-->
-<!--        <input class="form-control" th:field="*{description}" />-->
-<!--    </div>-->
-<!--    <div class="form-group">-->
-<!--        <label th:for="date">Due Date</label>-->
-<!--        <input class="form-control" type="date" th:field="*{date}" />-->
-<!--    </div>-->
-<!--    <button type="submit" class="btn btn-primary">Create Task</button>-->
+    <div class="form-group">
+        <label>Name
+            <input th:field="${task.name}" class="form-control">
+        </label>
+        <p class="error" th:errors="${task.name}"></p>
+    </div>
+    <div class="form-group">
+        <label>Description:
+            <input th:field="${task.description}" class="form-control">
+        </label>
+        <p class="error" th:errors="${task.description}"></p>
+    </div>
+    <div class="form-group">
+        <label>Start Date:
+            <input th:field="${task.startDate}" class="form-control">
+        </label>
+        <p class="error" th:errors="${task.startDate}"></p>
+    </div>
+    <label>Due Date:
+        <input th:field="${task.dueDate}" class="form-control">
+    </label>
+    <p class="error" th:errors="${task.dueDate}"></p>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-success">
+    </div>
 </form>
 </body>
 </html>
