Added logout button to navigation bar

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,6 +12,7 @@
         <ul class="nav">
             <li class="nav-item"><a class="nav-link" href="">Tasks</a></li>
             <li class="nav-item"><a class="nav-link" href="">Add Task</a></li>
+            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
         </ul>
     </nav>
     </body>
