Created Single-task Controller, single-task.html

--- a/src/main/resources/templates/single-task.html
+++ b/src/main/resources/templates/single-task.html
@@ -6,13 +6,13 @@
 <body>
 <div class="container body-content">
 <!--    <h1 th:text="${#strings.capitalizeWords(title)}"></h1>-->
-    <h1 class = "centered">Task</h1>
-    <ul>
+    <h1 class="centered">Task</h1>
+    <ol type="circle">
         <li>Task Name</li>
         <li>Description</li>
         <li>Date Started</li>
         <li>Date Completed</li>
-    </ul>
+    </ol>
 </div>
 </body>
 </html>
