typo in register view

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,6 +3,8 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 <h1 th:text="${title}">Smart Planner</h1>
+
+<nav>
 <ul class="nav">
     <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
 </ul>
