--- a/src/main/resources/templates/single-task.html
+++ b/src/main/resources/templates/single-task.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<!--<nav th:replace="fragments :: header"></nav>-->
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head">
+    <meta charset="UTF-8">
 </head>
 <body>
 <div class="container body-content">
-<!--    <h1 th:text="${#strings.capitalizeWords(title)}"></h1>-->
+    <nav th:replace="fragments :: header"></nav>
     <h1 class="centered">Task</h1>
     <ol type="circle">
-        <li>Task Name</li>
-        <li>Description</li>
+        <li>Id</li>
+        <li>Details</li>
         <li>Date Started</li>
         <li>Date Completed</li>
     </ol>
