--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -7,6 +7,7 @@
 <nav th:replace="fragments :: header"></nav>
 <h1>Edit Task</h1>
 <form method="post" th:action="@{/edit}">
+    <input type="hidden" th:field="${task.id}" name="taskId" />
     <div class="form-group">
         <label>Name
             <input th:field="${task.name}" class="form-control">
@@ -31,7 +32,7 @@
     <p class="error" th:errors="${task.dueDate}"></p>
     </div>
     <div class="form-group">
-        <input type="submit" value="Edit" class="btn btn-success">
+        <input type="submit" value="Update" class="btn btn-success">
     </div>
 </form>
 </body>
