--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-    <head th:replace="fragments :: head">
-    </head>
+    <head th:replace="fragments :: head"></head>
     <body>
         <div class="container">
             <h1>Smart Planner</h1>
