--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -22,12 +22,12 @@
     </div>
     <div class="form-group">
         <label>Start Date:
-            <input th:field="${task.startDate}" class="form-control">
+            <input type="date" th:field="${task.startDate}" class="form-control">
         </label>
         <p class="error" th:errors="${task.startDate}"></p>
     </div>
     <label>Due Date:
-        <input th:field="${task.dueDate}" class="form-control">
+        <input type="date" th:field="${task.dueDate}" class="form-control">
     </label>
     <p class="error" th:errors="${task.dueDate}"></p>
     </div>
