--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,9 +11,9 @@
         <h1 th:text="${title}">Smart Planner</h1>
         <ul class="nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="list">Tasks</a></li>
-            <li class="nav-item"><a class="nav-link" href="add">Add Task</a></li>
-            <li class="nav-item"><a class="nav-link" href="logout">Logout</a></li>
+            <li class="nav-item"><a class="nav-link" href="/list">Tasks</a></li>
+            <li class="nav-item"><a class="nav-link" href="/add">Add Task</a></li>
+            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
         </ul>
     </nav>
     </body>
