--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,6 +12,11 @@
 
 <form method="post">
     <div class="form-group">
+        <label>Name
+            <input class="form-control" th:field="${registerFormDTO.firstName}">
+        </label>
+    </div>
+    <div class="form-group">
         <label>Username
             <input class="form-control" th:field="${registerFormDTO.username}" />
         </label>
