--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,6 +14,7 @@
             <li class="nav-item"><a class="nav-link" href="/list">Tasks</a></li>
             <li class="nav-item"><a class="nav-link" href="/add">Add Task</a></li>
             <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+            <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
         </ul>
     </nav>
     </body>
