added responsive web design to the home and add page.

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -43,3 +43,14 @@
 .dark > * {
     color: rgb(255, 255, 255);
   }
+
+@media only screen and (min-width: 970px) {
+  html {
+    width: 50%;
+  }
+
+  @media only screen and (max-width: 1300px) {
+    html {
+      display: none;
+    }
+  }
