--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -16,7 +16,8 @@
     </div>
     <div class="form-group">
         <label>Description:
-            <input th:field="${task.description}" class="form-control">
+            <textarea th:field="${task.description}" class="form-control" rows="5" cols="20" name="description">
+            </textarea>
         </label>
         <p class="error" th:errors="${task.description}"></p>
     </div>
