--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -8,32 +8,48 @@
 <h1>Edit Task</h1>
 <form method="post" th:action="@{/edit}">
     <input type="hidden" th:field="${task.id}" name="taskId" />
+
     <div class="form-group">
         <label>Name
             <input th:field="${task.name}" class="form-control">
         </label>
         <p class="error" th:errors="${task.name}"></p>
     </div>
+
     <div class="form-group">
         <label>Description:
             <input th:field="${task.description}" class="form-control">
         </label>
         <p class="error" th:errors="${task.description}"></p>
     </div>
+
     <div class="form-group">
         <label>Start Date:
             <input th:field="${task.startDate}" class="form-control">
         </label>
         <p class="error" th:errors="${task.startDate}"></p>
     </div>
-    <label>Due Date:
-        <input th:field="${task.dueDate}" class="form-control">
-    </label>
-    <p class="error" th:errors="${task.dueDate}"></p>
+
+    <div class="form-group">
+        <label>Due Date:
+            <input th:field="${task.dueDate}" class="form-control">
+        </label>
+        <p class="error" th:errors="${task.dueDate}"></p>
     </div>
+
+    <div class="form-group">
+        <label>Status:
+            <select th:field="${task.taskProgressEnum}" class="form-control">
+                <option th:each="status : ${(statuses)}" th:value="${status}" th:text="${status}" ></option>
+            </select>
+        </label>
+        <p class="error" th:errors="${task.taskProgressEnum}"></p>
+    </div>
+
     <div class="form-group">
         <input type="submit" value="Update" class="btn btn-success">
     </div>
+
 </form>
 </body>
 </html>
