--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -28,6 +28,15 @@
               <td th:text="${task.dueDate}">07/14/23</td>
               <td th:text="${task.taskProgressEnum}">progress</td>
               <td>
+<!--                  <a th:href="@{/edit/{id}(id=${task.id})}">Edit</a>-->
+<!--                  <a th:href="@{/delete/{id}(id=${task.id})}">Delete</a>-->
+
+                  <form th:action="@{/edit}" method="get">
+                      <input type="hidden" name="taskId" th:value="${task.id}" />
+                      <button type="submit" class="btn btn-primary">Edit</button>
+                  </form>
+
+
                   <a th:href="@{/edit/{id}(id=${task.id})}">Edit</a>
                   <a th:href="@{/delete/{id}(id=${task.id})}">Delete</a>
 
