--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -44,7 +44,7 @@
     color: rgb(255, 255, 255);
   }
 
-@media only screen and (min-width: 970px) {
+/*@media only screen and (min-width: 970px) {
   html {
     width: 50%;
   }
@@ -53,4 +53,4 @@
     html {
       display: none;
     }
-  }
+  }*/
