fixed edit and delete page to process and updated application name

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
     <head th:replace="fragments :: head"></head>
     <body>
         <div class="container">
-            <h1>Smart Planner</h1>
+            <h1>Zen</h1>
             <nav th:replace="fragments :: header"></nav>
             <div class="btn-group-vertical btn-group-lg">
                 <a class="btn btn-primary" href="list" role="button">Tasks</a>
