--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
     <head th:fragment="head">
         <meta charset="UTF-8" name="viewpoint" content="width=device-width, initial-scale=1"/>
-        <title>Smart Planner</title>
+        <title>Zen</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles.css">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -16,7 +16,7 @@
         </div>
     </header>
     <nav th:fragment="header">
-        <h1 th:text="${title}">Smart Planner</h1>
+        <h1 th:text="${title}">Zen</h1>
         <ul class="nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/list">Tasks</a></li>
