working now- enum is showing and is editable. drop tables before using just in case one of the values is null

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -44,7 +44,7 @@
         <label>Progress Status:
             <select th:field="*{task.taskProgressEnum}" class="form-control form-select w-100">
                 <option th:each="enum : ${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).values()}"
-                        th:value="${taskProgressEnum}"
+                        th:value="${enum}"
                         th:text="${enum.getDisplayStatus()}">
                 </option>
             </select>
