Added imaged to each radio and updated values to reflect filepaths, changed the profile photo to update according to user & removed code used for testing purposes, changed postmapping for picture to be able to use the current logged in user, and cleaned up code. Added profile picture images

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -8,10 +8,13 @@
 <h1>User Profile</h1>
     <hr>
     <div class="media">
-        <img class="align-self-start mr-3" th:src="@{/images/user.png}" alt="Generic placeholder image">
-<!--        <img class="align-self-start mr-3" th:text="${user.profilePicture}" alt="Generic placeholder image">-->
+<!--        this works-->
+<!--        <img class="align-self-start mr-3" th:src="@{/images/red.png}" alt="Profile Picture Image">-->
+        <tr th:each="user: ${users}">
+        <img class="align-self-start mr-3" th:src="@{${user.profilePicture}}" alt="Profile Picture Image">
         <div class="media-body">
             <h5 class="mt-0">Welcome Back</h5>
+
 
             <!-- get an individual username and first name-->
 <!--            <p th:text=${user.firstName}">Name</p>-->
@@ -24,9 +27,8 @@
 <!--get all usernames and first names-->
             <ul class="list-group">
 <!--                <li class="list-group-item" th:each="user :${users}" th:text="${user}"></li>-->
-                <li class="list-group-item list-group-item-primary" th:each="user :${users}" th:text="${user.firstName}"></li>
-                <li class="list-group-item list-group-item-success" th:each="user :${users}" th:text="${user.username}"></li>
-                <li class="list-group-item list-group-item-success" th:each="user :${users}" th:text="${user.profilePicture}"></li>
+                <li class="list-group-item list-group-item-primary" th:each="user :${users}" th:text=" 'Name: ' + ${user.firstName}"></li>
+                <li class="list-group-item list-group-item-success" th:each="user :${users}" th:text=" 'Username: ' + ${user.username}"></li>
 
             </ul>
 
