--- a/src/main/resources/templates/picture.html
+++ b/src/main/resources/templates/picture.html
@@ -11,26 +11,26 @@
 <form method="post" th:action="@{/profile/picture}">
     <input type="hidden" th:field="${user.username}" name="username">
     <div class="form-group">
-        <label> User Photo
-        <input type="radio" name="profilePicture" value="photo" class="form-control" checked>
+        <label>  <img src="/images/user.png"> Default
+        <input type="radio" name="profilePicture" value="/images/user.png" class="form-control" checked>
         </label>
     </div>
 
     <div class="form-group">
-        <label> Panda
-            <input type="radio" name="profilePicture" value="panda" class="form-control">
+        <label> <img src="/images/blue.png"> Blue
+            <input type="radio" name="profilePicture" value="/images/blue.png" class="form-control">
         </label>
     </div>
 
     <div class="form-group">
-        <label> Owl
-            <input type="radio" name="profilePicture" value="owl" class="form-control">
+        <label> <img src="/images/red.png"> Red
+            <input type="radio" name="profilePicture" value="/images/red.png" class="form-control">
         </label>
     </div>
 
     <div class="form-group">
-        <label> Zebra
-            <input type="radio" name="profilePicture" value="zebra" class="form-control">
+        <label> <img src="/images/yellow.png"> Yellow
+            <input type="radio" name="profilePicture" value="/images/yellow.png" class="form-control">
         </label>
     </div>
 
