--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -10,7 +10,7 @@
 
 <div class="container body-content">
 
-  <nav>
+  <nav th:fragment="header">
     <ul class="nav">
       <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="/list">Tasks</a></li>
