--- a/src/main/resources/templates/taskDetails/taskDetails.html
+++ b/src/main/resources/templates/taskDetails/taskDetails.html
@@ -4,17 +4,20 @@
 <head th:replace="fragments :: head"></head>
 
 <body>
-    <div class="container">
-        <nav th:replace="fragments :: header"></nav>
-    </div>
-    <div class="container body-content">
-        <h1 class="centered" th:text="${task.name}"></h1>
-        <ol type="circle" class="list-group">
-            <li class="list-group-item active"><span th:text="${task.description}"></span></li>
-            <li  class="list-group-item"><span>Task ID: </span><span th:text="${task.id}"></span></li>
-            <li class="list-group-item"><span>Start Date: </span><span th:text="${task.startDate}">Date Started></span></li>
-            <li class="list-group-item"><span>Due Date: </span><span th:text="${task.dueDate}">Date Completed></span></li>
-        </ol>
-    </div>
+<div class="container">
+    <nav th:replace="fragments :: header"></nav>
+</div>
+
+<div class="container body-content">
+    <h1 class="centered" th:text="${task.name}">Task Title</h1>
+    <ol type="circle" class="list-group">
+        <li class="list-group-item active"><span>Details: </span><span th:text="${task.description}">Task Description</span></li>
+        <li class="list-group-item"><span>Task ID: </span><span th:text="${task.id}">123456</span></li>
+        <li class="list-group-item"><span>Start Date: </span><span th:text="${task.startDate}">2023-08-01</span></li>
+        <li class="list-group-item"><span>Due Date: </span><span th:text="${task.dueDate}">2023-08-31</span></li>
+    </ol>
+</div>
+
 </body>
 </html>
+
