--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,6 +21,7 @@
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/list">Tasks</a></li>
             <li class="nav-item"><a class="nav-link" href="/add">Add Task</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
         </ul>
     </nav>
