completed about page; need to decide whether to keep individual info

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -12,7 +12,7 @@
     <div class="row">
         <section>
             <p>Zen was created for you to discover tranquility and efficiency in your daily tasks.
-                You can experience a serene way to manage your to-dos, effortlessly track their progress, and effortlessly prioritize what matters most.
+                Experience a serene way to manage your to-dos, effortlessly track their progress, and effortlessly prioritize what matters most.
                 Embrace a journey of heightened productivity and harmony as you navigate your tasks in a state of Zen-like clarity.
                 Elevate your task management and unlock a world of calm accomplishment with Zen.</p>
         </section>
