made some minor text edits

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -28,8 +28,8 @@
                 <div class="row">
                     <div class="col-md-8">
                         <h4>Name: John Doe</h4>
-                        <p>Email: johndoe@example.com</p>
-                        <p>Location: New York, USA</p>
+                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
+                        <p>Features: New York, USA</p>
                         <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
@@ -43,8 +43,8 @@
                 <div class="row">
                     <div class="col-md-8">
                         <h4>Name: John Doe</h4>
-                        <p>Email: johndoe@example.com</p>
-                        <p>Location: New York, USA</p>
+                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
+                        <p>Features: New York, USA</p>
                         <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
@@ -58,8 +58,8 @@
                 <div class="row">
                     <div class="col-md-8">
                         <h4>Name: John Doe</h4>
-                        <p>Email: johndoe@example.com</p>
-                        <p>Location: New York, USA</p>
+                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
+                        <p>Features: New York, USA</p>
                         <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
                 <div class="row">
                     <div class="col-md-8">
                         <h4>Name: John Doe</h4>
-                        <p>Email: johndoe@example.com</p>
-                        <p>Location: New York, USA</p>
+                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
+                        <p>Features: New York, USA</p>
                         <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
@@ -88,8 +88,8 @@
                 <div class="row">
                     <div class="col-md-8">
                         <h4>Name: John Doe</h4>
-                        <p>Email: johndoe@example.com</p>
-                        <p>Location: New York, USA</p>
+                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
+                        <p>Features: New York, USA</p>
                         <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                 </div>
