--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -13,9 +13,9 @@
           <thead class="thead-dark">
           <tr>
               <th scope="col">Name:</th>
-              <th scope="col">Description</th>
-              <th scope="col">StartDate:</th>
-              <th scope="col">DueDate:</th>
+              <th scope="col">Description:</th>
+              <th scope="col">Start Date:</th>
+              <th scope="col">Due Date:</th>
               <th scope="col">Actions:</th>
           </tr>
           </thead>
